refactor(java25): Stream.toList() for read-only collectors (batch 2)
Replace .collect(Collectors.toList()) with .toList() at 5 verified read-only sites
(WiredExtraTextOutputFurniName, WiredTriggerReceiveSignal x2, WiredHighscoreDataEntry,
WiredHighscoreManager username row) and drop the now-unused Collectors imports.
Deliberately SKIPPED the 4 WiredHighscoreManager getHighscoreRowsForItem() return
sites: their result is assigned to InteractionWiredHighscore.data which calls
data.clear() — an immutable toList() there would throw at runtime. Also skipped a
Collectors.toSet() (no Stream.toSet equivalent) and a javadoc occurrence.
Build 4.2.58, 464 tests green.