@@ -4,7 +4,6 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class WiredHighscoreDataEntry {
     private final int itemId;
@@ -23,7 +22,7 @@ public class WiredHighscoreDataEntry {
 
     public WiredHighscoreDataEntry(ResultSet set) throws SQLException {
         this.itemId = set.getInt("item_id");
-        this.userIds = Arrays.stream(set.getString("user_ids").split(",")).map(Integer::valueOf).collect(Collectors.toList());
+        this.userIds = Arrays.stream(set.getString("user_ids").split(",")).map(Integer::valueOf).toList();
         this.score = set.getInt("score");
         this.isWin = set.getInt("is_win") == 1;
         this.timestamp = set.getInt("timestamp");
